# slatedb-benchmark

./: .act.env.example  .actrc  .dockerignore  .gitignore  BENCHMARKS.md  CHARTS.md  Cargo.toml  DESIGN.md  Dockerfile  build.rs  docker-compose.yml
.github/workflows/: benchmark-suite.yml  benchmark.yml  ci.yml  golden.yml  pages.yml  release.yml
config/: published.json  rocksdb.profile.toml  rocksdb.settings.toml  rocksdb.suite.toml  settings.sustained-ingest.toml  settings.toml  slatedb.settings.toml  slatedb.suite.toml  smoke.json  smoke.settings.toml  smoke.suite.toml  ycsb.settings.toml  ycsb.suite.toml
patches/: slatedb-main-cache-range-copy.patch
patches/slatedb/: 0001-Probe-object-store-cache-during-compaction.patch  0001-compactor-read-through-cache.patch  0001-log-l0-compaction-lifecycle.patch  0002-Notify-embedded-compaction-components.patch  0002-log-subcompaction-lifecycle.patch  0002-read-compaction-inputs-through-object-store-cache.patch  0003-Add-trivial-move-compactions.patch  0004-Refresh-embedded-compaction-state-without-polling.patch  0005-Log-state-file-I-O-time-and-size.patch  0006-Cache-embedded-state-file-reads.patch  001-separate-cache-mutations-from-read-access.patch  002-async-incremental-cache-eviction.patch  003-coalesce-cache-read-recency.patch  cache-read-event-coalescing.patch  parallel-cache-eviction.patch
results/0.13.1/: run.json
results/0.14.1/: run.json
runner/: Cargo.toml  build.rs
runner/src/: cli.rs  config.rs  cost.rs  histogram.rs  instrumented_store.rs  lib.rs  main.rs  model.rs  object_store_probe.rs  runner.rs  system.rs  validation.rs  workflow.rs
runner/src/runner/: session.rs
runner/src/workloads/: closed.rs  durability.rs  mod.rs  open_loop.rs  stats.rs  util.rs
schema/: histograms-v1.json  histograms.json  prices-tigris-2026-07-14.json  prices.json  result-v1.json  result.json  run-v1.json  run.json  series.json  timeseries-v1.json  timeseries.json
scripts/: apply-slatedb-patch.sh  bundle.py  fixtures.sh  generate-scaled-fixtures.sh  publish-results.sh  publish.sh  select-slate-source.sh  smoke.sh  test_bundle.py  test_warp_latency.py  transfer-capacity.sh  use-local-slatedb.py  use-local-slatedb.sh  verify-smoke.mjs  warp-latency.jq
site/: astro.config.mjs  package-lock.json  package.json
src/: cli.rs  config.rs  cost.rs  database_size.rs  histogram.rs  instrumented_http.rs  instrumented_store.rs  lib.rs  main.rs  model.rs  object_store.rs  object_store_probe.rs  runner.rs  system.rs  validation.rs  workflow.rs
website/: package-lock.json  package.json
(+370 files in other folders)
