[package]
name = "slatedb-benchmark"
description = "Release benchmark runner for SlateDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "slatedb-benchmark"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
hdrhistogram.workspace = true
hostname.workspace = true
humantime.workspace = true
jsonschema.workspace = true
object_store.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slatedb.workspace = true
slatedb-common.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
uuid.workspace = true

[build-dependencies]
sha2.workspace = true

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
